# thermostate

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  github_deploy_key.enc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pythonpackage.yml
conda.recipe/: meta.yaml
docs/: .gitignore  Makefile  Plot-Tutorial.ipynb  Tutorial.ipynb  air-standard-brayton-cycle-example.ipynb  cascade-refrigeration-cycle-example.ipynb  cold-air-brayton-cycle-example.ipynb  conf.py  diesel-cycle-example.ipynb  examples.rst  index.rst  installation.rst  make.bat  rankine-cycle-example.ipynb  regen-reheat-rankine-cycle-example.ipynb  thermostate.rst
docs/_static/: README
docs/_templates/: README  layout.html
paper/: codemeta.json  paper.bib  paper.md
src/thermostate/: __init__.py  _version.py  abbreviations.py  plotting.py  thermostate.py  vapordome.py
tests/: test_abbreviations.py  test_plotting.py  test_thermostate.py
thermostate/: __init__.py  _version.py  abbreviations.py  thermostate.py  units.py
thermostate/tests/: test_abbreviations.py  test_thermostate.py  test_units.py
