[metadata]
name = thermostate
version = file: VERSION.txt
description = A package to manage thermodynamic states
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = thermodynamics, chemistry, state, education
maintainer = Bryan W. Weber
author = Bryan W. Weber
maintainer_email = bryan.w.weber@gmail.com
url = https://thermostate.readthedocs.io/
project_urls =
    Source=https://github.com/bryanwweber/thermostate
    Tracker=https://github.com/bryanwweber/thermostate/issues
platforms = any
license = BSD-3-clause
license_file = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 8
    Operating System :: Microsoft :: Windows :: Windows 8.1
    Operating System :: POSIX
    Operating System :: POSIX :: Linux

[options]
package_dir=
    =src
packages = find:
# 3.9 and 3.10 are not directly supported until wheels for CoolProp are available
python_requires = >=3.7
install_requires =
    coolprop >=6.1.0; python_version<='3.8'
    coolprop >6.4.1; python_version>='3.9'
    pint >=0.9,<0.20
    matplotlib >=2.0
    numpy >=1.15

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx >=2.0.0,<4
    nbsphinx >=0.4.2
    jupyter-client >=5.3.0
    recommonmark >=0.6.0
    ipython >=7.5.0
    ipykernel >=5.1.0
testing =
    pytest >= 3.0.0
    pytest-cov >= 2.5.1

[flake8]
max_line_length = 88
exclude =
    tests/__init__.py
# Ignore docstring requirement for dunder methods and __init__,
# the latter only when the class is documented separately
extend_ignore = D105,D107
